Increase MaxPermSize for the forked test cases (I got an out of permgen space error on the tests in embed mode).